# keydo

./: Cargo.toml  LICENSE  README.md
src/: config.rs  config_impl.rs  config_parse.rs  config_parser.rs  config_validate.rs  daemon.rs  device.rs  error.rs  ini.rs  install.rs  ipc.rs  keyboard.rs  keyboard_impl.rs  keyboard_types.rs  keys.rs  macos_input.rs  macro_parse.rs  macro_parser.rs  macro_types.rs  main.rs  test_io.rs  tests.rs  unicode.rs  vkbd.rs  windows_input.rs
src/keyboard_impl/: actions.rs  cache.rs  chord.rs  dispatch.rs  layer.rs  macro_exec.rs  mod.rs  overload.rs  timeout.rs  timeout_handler.rs
src/macos/: input.rs  keycodes.rs  mod.rs  vkbd.rs
