[package]
name = "keydo"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
nix = { version = "0.27", features = ["fs", "ioctl", "poll", "sched", "mman", "uio", "socket", "signal", "inotify"] }
signal-hook = "0.3"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
libc = "0.2"
fxhash = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
evdev = "0.12"
